hero section mobile height fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,7 +35,7 @@ body {
   width: 100vw;
   overflow-x: hidden;
   min-height: 100vh;
-  max-width: 1800px;
+  max-width: 100%;
 }
 
 body {
